<resources>
    <string name="transition_icon">icon</string>
    <string name="transition_exercise">exercise</string>
    <string name="transition_superset_exercise">exercise</string>
    <string name="transition_reps">reps</string>
    <string name="transition_superset_reps">reps</string>
    <string name="transition_sets">sets</string>
    <string name="transition_rest">method</string>
    <string name="transition_method">sets</string>
    <string name="app_name">RM1</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n\nLicensed under the Amazon Software License (the "License").\nYou may not use this file except in compliance with the License.\nA copy of the License is located at\n\nhttp://aws.amazon.com/asl/
\n\nor in the "license" file accompanying this app. This app is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="more_info">This is a sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="log_mode_checkbox">Don\'t show again</string>
    <string name="log_in">log in</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_login2">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullname">Full name</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_to_signup">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="default_notification_channel_id">"rm1channel"</string>
    <string name="shared_preferences">AppSharedPreferences</string>
    <string name="share_program">Share Program</string>
    <string name="no_program">You haven\'t loaded any programs yet.</string>
    <string name="load_program_to_share">Load or create a program to share.</string>
    <string name="created_program_title">You have created a new Program!</string>
    <string name="got_it">GOT IT</string>
    <string name="created_program_content">Start architecting your program with some nice Exercises and Workouts.</string>
    <string name="go_to_my_programs">Go To My Programs</string>
    <string name="no_program_content">You can navigate to My Programs and load or create a program there.</string>
    <string name="navigate_my_programs_button">Navigate To My Programs</string>
    <string name="change_repetitions_title">Change repetitions</string>
    <string name="change_btn_text">CHANGE</string>
</resources>