<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:background="@color/colorAccent"

    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <FrameLayout
        android:elevation="10dp"
        android:id="@+id/activity_register_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:orientation="vertical"

   >

    <ImageView
        android:id="@+id/activity_login_exit_iv"
        android:src="@drawable/ic_close_white_24dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"/>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:paddingBottom="15dp"
            android:gravity="center_horizontal"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/logo_iv"
                    android:src="@drawable/icon_layer_rm1"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content" />

                <com.strongest.savingdata.MyViews.SmartProgressBar
                    android:id="@+id/login_activity_smartprogressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></com.strongest.savingdata.MyViews.SmartProgressBar>

            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                app:theme="@style/ThemeTextInputColorAccent"
                android:background="@drawable/aviv_border"
                android:elevation="5dp"
                android:textColorHint="@color/colorPrimary"
                style="@style/TextInputColorAccent"
                >

                <AutoCompleteTextView
                    android:textColor="@color/colorPrimary"
                    android:background="@color/transparent"
                    android:padding="10dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="15dp"
                app:theme="@style/ThemeTextInputColorAccent"
                android:background="@drawable/aviv_border"
                android:elevation="5dp"
                android:textColorHint="@color/colorPrimary"
                style="@style/TextInputColorAccent">

                <EditText
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:elevation="5dp"
                android:id="@+id/email_sign_in_button"
                android:layout_width="220dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_log_in"
                android:textStyle="bold" />

            <Button
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:elevation="5dp"
                android:id="@+id/to_sign_activity"
                android:layout_width="220dp"
                android:layout_height="50dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="16dp"
                android:text="@string/action_to_signup"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>
</RelativeLayout>
